# libHttpClient

./: .gitattributes  .gitignore  .gitmodules  NOTICE.txt  README.md  SECURITY_AUDIT_BOOST-WINTLS.md  ThirdPartyNotices.txt  cgmanifest.json  custom.props  hc_settings.props.example  libHttpClient.props  libHttpClient.vs2015.sln  libHttpClient.vs2017.sln  libHttpClient.vs2019.sln  libHttpClient.vs2022.sln  platform_select.props
.github/: copilot-instructions.md
Include/: XAsync.h  XAsyncProvider.h  XTaskQueue.h  asyncProvider.h  asyncQueue.h  asyncQueueEx.h
Include/httpClient/: async.h  asyncProvider.h  asyncQueue.h  async_jvm.h  config.h  httpClient.h  httpProvider.h  mock.h  pal.h  task.h  trace.h  types.h  types_android.h  types_generic.h
Include/json_cpp/: Readme.md  json.h
Samples/CustomHttpImplWithCurl/: App.xaml.cpp  App.xaml.h  CustomHttpImplWithCurl.sln  CustomHttpImplWithCurl.vcxproj  CustomHttpImplWithCurl.vcxproj.filters  MainPage.xaml.cpp  MainPage.xaml.h  PerformWithCurl.cpp  pch.h
Samples/GDK-Http/: DeviceResources.cpp  DeviceResources.h  GDKHttp.filters  GDKHttp.sln  GDKHttp.vcxproj  Game.cpp  Game.h  Main.cpp  MicrosoftGameConfig.mgc  pch.h
Samples/Http/: Http.sln  Http.vcxproj  MainPage.xaml.cpp  Package.appxmanifest
Samples/HttpTestApp/: App.xaml.cpp  HttpTestApp.sln  HttpTestApp.vcxproj  MainPage.xaml  MainPage.xaml.h  Package.appxmanifest
Samples/UWP-CustomHttpImplWithCurl/: .gitignore  CustomHttpImplWithCurl.sln  CustomHttpImplWithCurl.vcxproj  CustomHttpImplWithCurl.vcxproj.filters  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  PerformWithCurl.cpp  ThirdPartyNotices.txt  readme.md
Samples/UWP-Http/: Http.sln  Http.vcxproj  Http2019.vcxproj  MainPage.xaml.cpp  MainPage.xaml.h
Samples/UWP-WebSocket/: App.xaml  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  WebSocket.sln  WebSocket.vcxproj  WebSocket2019.vcxproj  pch.h
Samples/WebSocketEchoServer/: WebSocketEchoServer.cpp  WebSocketEchoServer.vcxproj  WebSocketEchoServer.vcxproj.filters
Samples/Win32-Http/: TestContent-2.json  Win32Http.sln  Win32Http.vcxproj  Win32Http.vcxproj.filters  Win32Http2019.vcxproj  main.cpp  stdafx.cpp  stdafx.h  test-json-2.json
Samples/Win32Http/: Win32Http.vcxproj  main.cpp
Samples/Win32WebSocket/: Win32WebSocket.vcxproj  Win32WebSocket.vcxproj.filters  Win32WebSocket2019.vcxproj  main.cpp  pch.h
Samples/XDK-Http/: Http_2017.sln  Http_2017.vcxproj  Http_2017.vcxproj.filters  Main.cpp  Package.appxmanifest  Sample.cpp  Sample.h  pch.h
Source/Common/: EntryList.h  Result.h  ResultMacros.h  StdOptional.h  Types.h  asyncop.cpp  asyncop.h  buildver.h  compression.cpp  compression.h  global_publics.cpp  mem.cpp  mem.h  pal_internal.h  pch.cpp  pch_common.h  public_settings_fns.cpp  public_task_fns.cpp  settings.cpp  settings_publics.cpp  singleton.cpp  singleton.h  task.cpp  task.h  taskImpl.cpp  taskImpl.h  task_publics.cpp  threadpool.cpp  threadpool.h  uri.cpp  uri.h  utils.cpp  utils.h
Source/Global/: NetworkState.cpp  NetworkState.h  global.cpp  global.h  global_publics.cpp  mem.cpp  mem.h  perform_env.cpp  perform_env.h
Source/HTTP/: compression.cpp  compression.h  httpcall.cpp  httpcall.h  httpcall_publics.cpp  httpcall_request.cpp  httpcall_response.cpp  httpcallrequest.cpp  httpcallresponse.cpp
Source/Logger/: console_output.cpp  console_output.h  custom_output.cpp  custom_output.h  debug_output.cpp  debug_output.h  log.cpp  log.h  log_entry.cpp  log_output.cpp  log_publics.cpp  trace.cpp  trace_internal.h
Source/Mock/: lhc_mock.cpp  lhc_mock.h  mock.cpp  mock.h  mock_publics.cpp
Source/Task/: timer.h  (+32 more)
Tests/: TestWebApplication.sln  test_under_cdb.ps1
Utilities/: configureApple
Utilities/CMake/: CMakeLists.txt  GetAndroidHCSourceFiles.cmake  GetCommonHCSourceFiles.cmake  MakeProjects.cmd  SetAndroidHCSourceFiles.cmake  SetCommonHCSourceFiles.cmake  cmakeclean  libssl.cmake  template-libHttpClient.140.UWP.C.vcxproj  template-libHttpClient.140.Win32.C.vcxproj  template-libHttpClient.140.XDK.C.vcxproj  template-libHttpClient.141.Android.C.vcxproj  template-libHttpClient.141.GDK.C.vcxproj  template-libHttpClient.141.UWP.C.vcxproj  template-libHttpClient.141.Win32.C.vcxproj  template-libHttpClient.141.XDK.C.vcxproj  template-libHttpClient.142.Android.C.vcxproj  template-libHttpClient.142.GDK.C.vcxproj  template-libHttpClient.142.UWP.C.vcxproj  template-libHttpClient.142.Win32.C.vcxproj  template-libHttpClient.142.XDK.C.vcxproj  template-libHttpClient.GDK.C.vcxproj  template-libHttpClient.Linux.C.vcxproj  template-libHttpClient.UWP.C.vcxproj  template-libHttpClient.UnitTest.140.TAEF.vcxproj  template-libHttpClient.UnitTest.140.TE.vcxproj  template-libHttpClient.UnitTest.141.TAEF.vcxproj  template-libHttpClient.UnitTest.141.TE.vcxproj  template-libHttpClient.UnitTest.142.TAEF.vcxproj  template-libHttpClient.UnitTest.142.TE.vcxproj  template-libHttpClient.UnitTest.TAEF.vcxproj  template-libHttpClient.UnitTest.TE.vcxproj  template-libHttpClient.Win32.C.vcxproj  template-libHttpClient.XDK.C.vcxproj
Utilities/CMake/Android/: CMakeLists.txt  GetLibHCBinaryOutputDir.cmake  README.md  SetAndroidHCSourceFiles.cmake  SetBinaryOutputDir.cmake  SetCryptoSourceFiles.cmake  SetHCFlags.cmake  SetOpenSSLFlags.cmake  SetSslSourceFiles.cmake  WorkaroundToBuildStaticLibsInGradle.cmake  create_dummy_shared_to_build_static_libs.cmake  gradleStaticLib.cmake  libcrypto.cmake  libssl.cmake
Utilities/CMake/Android/libHttpClient/: CMakeLists.txt  GetLibHCFlags.cmake
Utilities/CMake/Android/openssl/: GetOpenSSLFlags.cmake
Utilities/CMake/Android/openssl/libcrypto/: CMakeLists.txt
Utilities/CMake/Android/openssl/libssl/: CMakeLists.txt
Utilities/CMake/Linux/: README.md
Utilities/CMake/Linux/libHttpClient/: CMakeLists.txt  GetLibHCFlags.cmake
Utilities/CMake/Linux/openssl/: GetOpenSSLFlags.cmake
Utilities/CMake/Linux/openssl/libcrypto/: CMakeLists.txt
Utilities/CMake/Linux/openssl/libssl/: CMakeLists.txt
Utilities/CMake/ProjectFileProcessor/: Program.cs  ProjectFileProcessor.csproj
Utilities/CMake/scripts/: DiffProjects.cmd  RunCMake.cmd
(+251 files in other folders)
